# claude-pyqt

./: README.md
gui_claudecode/: main.py  main_widget.py  pyproject.toml  standalone_app.py
gui_claudecode/app/components/: base.py
gui_claudecode/app/utils/: config.py  utils.py
gui_claudecode/app/widgets/basic_widget/: searchable_editable_combobox.py
gui_claudecode/app/widgets/side_dock_area/: tool_window.py
gui_claudecode/core/: __init__.py  agent.py  chat_engine.py  memory_manager.py  sub_agent_executor.py  task_state.py  tool_executor.py
gui_claudecode/skills/canvas-agent/: SKILL.md
gui_claudecode/skills/canvas-agent/scripts/: add_node.py  connect_nodes.py  create_canvas.py  get_canvas.py  get_component.py  list_canvases.py  list_components.py  set_input.py  set_property.py
gui_claudecode/tools/: __init__.py  canvas_tools.py  file_tools.py  git_tools.py  task_tools.py  terminal_tools.py  web_tools.py
gui_claudecode/utils/: builtin_tools.py  chat_session.py  history_manager.py  worker.py
gui_claudecode/widgets/: bottom_input_area.py  context_selector.py  llm_config_popup.py  memory_manager.py  message_card.py  question_floating_widget.py  sub_agent_floating_widget.py  todo_floating_widget.py  tool_floating_widget.py
