[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-claudecode"
version = "0.1.0"
description = "Standalone desktop GUI app for ClaudeCode-style agent chat workflows"
readme = { text = "Standalone PyQt desktop application converted from the original plugin project.", content-type = "text/plain" }
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "dingma" },
]
keywords = ["gui", "pyqt", "llm", "agent", "desktop"]
dependencies = [
  "loguru>=0.7.2",
  "markdown>=3.6",
  "openai>=1.30.0",
  "Pygments>=2.18.0",
  "PyQt-Fluent-Widgets>=1.5.5",
  "PyQt5>=5.15.10",
  "PyQtWebEngine>=5.15.7",
  "PyYAML>=6.0.1",
  "qtpy>=2.4.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "pyinstaller>=6.6.0",
  "ruff>=0.5.0",
]

[project.scripts]
gui-claudecode = "main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "tools*", "utils*", "widgets*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml", "*.json", "*.txt", "*.svg"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

